@@ -21,7 +21,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Map
+name|ArrayList
 import|;
 end_import
 
@@ -31,7 +31,17 @@ name|java
 operator|.
 name|util
 operator|.
-name|TreeMap
+name|Comparator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -380,49 +390,51 @@ name|void
 name|sortAttributes
 parameter_list|()
 block|{
-name|Map
+name|List
 argument_list|<
-name|String
-argument_list|,
 name|ObjAttribute
 argument_list|>
-name|attributeMap
+name|objAttributes
 init|=
 operator|new
-name|TreeMap
+name|ArrayList
 argument_list|<>
 argument_list|(
 name|entity
 operator|.
-name|getAttributeMap
+name|getDeclaredAttributes
 argument_list|()
 argument_list|)
 decl_stmt|;
+name|objAttributes
+operator|.
+name|sort
+argument_list|(
+name|Comparator
+operator|.
+name|comparing
+argument_list|(
+name|ObjAttribute
+operator|::
+name|getName
+argument_list|)
+argument_list|)
+expr_stmt|;
 for|for
 control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|String
-argument_list|,
 name|ObjAttribute
-argument_list|>
-name|entry
+name|attribute
 range|:
-name|attributeMap
-operator|.
-name|entrySet
-argument_list|()
+name|objAttributes
 control|)
 block|{
 name|entity
 operator|.
 name|removeAttribute
 argument_list|(
-name|entry
+name|attribute
 operator|.
-name|getKey
+name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -430,10 +442,7 @@ name|entity
 operator|.
 name|addAttribute
 argument_list|(
-name|entry
-operator|.
-name|getValue
-argument_list|()
+name|attribute
 argument_list|)
 expr_stmt|;
 block|}
@@ -443,49 +452,51 @@ name|void
 name|sortRelationships
 parameter_list|()
 block|{
-name|Map
+name|List
 argument_list|<
-name|String
-argument_list|,
 name|ObjRelationship
 argument_list|>
-name|relationshipMap
+name|relationships
 init|=
 operator|new
-name|TreeMap
+name|ArrayList
 argument_list|<>
 argument_list|(
 name|entity
 operator|.
-name|getRelationshipMap
+name|getDeclaredRelationships
 argument_list|()
 argument_list|)
 decl_stmt|;
+name|relationships
+operator|.
+name|sort
+argument_list|(
+name|Comparator
+operator|.
+name|comparing
+argument_list|(
+name|ObjRelationship
+operator|::
+name|getName
+argument_list|)
+argument_list|)
+expr_stmt|;
 for|for
 control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|String
-argument_list|,
 name|ObjRelationship
-argument_list|>
-name|entry
+name|relationship
 range|:
-name|relationshipMap
-operator|.
-name|entrySet
-argument_list|()
+name|relationships
 control|)
 block|{
 name|entity
 operator|.
 name|removeRelationship
 argument_list|(
-name|entry
+name|relationship
 operator|.
-name|getKey
+name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -493,10 +504,7 @@ name|entity
 operator|.
 name|addRelationship
 argument_list|(
-name|entry
-operator|.
-name|getValue
-argument_list|()
+name|relationship
 argument_list|)
 expr_stmt|;
 block|}
